<resources>
    <string name="app_name">movies </string>
    <!--- Movie-->
    <string name="Overview">overview </string>
    <string name="Rating">rate </string>
    <string name="Release_Date">release date </string>
    <string name="Adult">adult </string>
    <string name="Language">language </string>
    <string name="Original_Name">original name </string>
    <string name="Title">Title </string>

    <!---Review-->
    <string name="Name">name</string>
    <string name="Reviews">reviews</string>
    <string name="Continue">continue reading</string>

    <!--video-->
    <string name="Type">type</string>
    <string name="Site">site</string>
    <string name="video">trailer</string>

    <string name="MostPopular">Most popular</string>
    <string name="TopRate">Top Rated</string>
    <string name="Favourite">Favourite</string>
</resources>
